<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.sharangirdhani.homework04.TriviaActivity">

        <TextView
            android:id="@+id/textViewQuestionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/textTimeLeft"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/buttonQuit" />

        <ImageView
            android:id="@+id/imageQuestion"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/textViewTime"
            android:layout_marginTop="13dp"
            android:layout_toEndOf="@+id/textViewQuestionLabel"
            android:scaleType="fitCenter"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/imageQuestion"
            android:layout_toEndOf="@+id/textViewQuestionLabel"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_alignParentStart="true" />

        <RadioGroup
            android:id="@+id/radioGroupOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewQuestion"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/textViewQuestionLabel"
            android:layout_alignParentStart="true">

        </RadioGroup>

        <Button
            android:id="@+id/buttonQuit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonQuitLabel"
            android:onClick="quit"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/buttonQuit"
            android:layout_alignParentEnd="true"
            android:text="@string/buttonNext"
            android:onClick="nextQuestion"/>

        <ProgressBar
            android:id="@+id/progressBarImage"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageQuestion"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp" />

        <TextView
            android:id="@+id/textImageLoadingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressBarImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/textProgressLoadingImageLabel"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </RelativeLayout>
</layout>